# PlistCpp

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakePresetsBase.json  compile_commands.json  vcpkg.json
src/: CMakeLists.txt  PlistDate.cpp  base64.hpp
test/: CMakeLists.txt  PlistTests.cpp
